Fix form input on safari (#299)
- On safari users could not type into the amount input on tranfer money, send cash, and currency exchange and this PR fixes it.

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -312,12 +312,6 @@ h5 {
     margin: 8px 0;
     .ui.input {
       width: 100%;
-      input {
-        -webkit-user-select: none; /* Chrome all / Safari all */
-        -moz-user-select: none; /* Firefox all */
-        -ms-user-select: none; /* IE 10+ */
-        user-select: none;
-      }
     }
     span {
       position: absolute;
